# wallet-transaction-api

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
migrations/: env.py
migrations/versions/: d99149ecc078_initial_migration.py
tests/: conftest.py  test_api.py  test_integration.py  test_models.py
wallet_transaction_api/: __init__.py  api_urls.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
wallet_transaction_api/migrations/: 0001_initial.py  0002_alter_wallet_label.py  0003_alter_transaction_options.py  0004_alter_transaction_amount.py  __init__.py
