[tool.poetry]
name = "wallet-transaction-api"
version = "0.1.0"
description = ""
authors = ["a.getashvili <a.getashvili@1440.space>"]
readme = "README.md"
packages = [{include = "wallet_transaction_api"}]

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework-jsonapi = "^7.0.2"
mysqlclient = "^2.2.4"
django-environ = "^0.11.2"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
